k8s/nifi-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-service
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
    - name: https
      port: 8443
      targetPort: 8443
